--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -10,7 +10,7 @@ BYTE=ocamlc.opt$(EXE)
 OCAMLLEX=ocamllex.opt$(EXE)
 CAMLP4OF=camlp4of
 CAMLDEP=ocamldep.opt$(EXE)
-COMPFLAGS= -g -w -40-30 -warn-error +a-40-30
+COMPFLAGS= -g -w +6-40-30 -warn-error +a-40-30
 
 
 .SUFFIXES: .mli .ml .cmi .cmx .mll
