--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -74,7 +74,7 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	math_test bal_set_mini gpr_974_test test_cpp\
 	global_module_alias_test class_fib_open_recursion_test\
 	topsort_test flexible_array_test\
-	gray_code_test
+	gray_code_test alias_test
 
 
 
