remove Misc.maybe_map deps

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -204,6 +204,7 @@ CORE_SRCS= type_int_to_string type_util  ocaml_stdlib_slots bs_conditional_initi
 	js_of_lam_option js_output lam_compile_global lam_dispatch_primitive lam_beta_reduce\
 	lam_compile_external_call lam_compile_primitive lam_compile lam_pass_exits\
 	lam_pass_count\
+	lam_pass_eliminate_ref\
 	lam_pass_lets_dce \
 	lam_pass_remove_alias lam_compile_group\
 	js_implementation ocaml_batch_compile
