fix bugs of bsb

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -467,7 +467,7 @@
                 "a.ml"
             ]
     }  
-    , "bsc-flags" : ["-w -40-30", "-w +a"]
+    // , "bsc-flags" : ["-w -40-30", "-w +a"]
     , "generate-merlin" : true
     // "ppx-flags": ["reason/bin/reactjs_jsx_ppx"]
     // ,
