fix 1154, no inlining when operands have side effect

--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -89,7 +89,9 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	exception_alias\
 	prepend_data_ffi\
 	gbk\
-	gpr_1072_reg
+	gpr_1072_reg\
+	gpr_1150\
+	gpr_1154_test
 
 SOURCE_LIST :=  $(OTHERS) 
 TESTS := $(addsuffix .cmj, $(SOURCE_LIST) )
