--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -92,7 +92,8 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	gpr_1072_reg\
 	gpr_1150\
 	gpr_1154_test\
-	obj_curry_test
+	obj_curry_test\
+	gpr_1170
 
 SOURCE_LIST :=  $(OTHERS) 
 TESTS := $(addsuffix .cmj, $(SOURCE_LIST) )
