better error message when package not found

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -251,8 +251,12 @@ CORE_CMXS=$(addprefix core/, $(addsuffix .cmx, $(CORE_SRCS)))
 OTHER_CORE_SRCS= bsppx_main bspack_main jsoo_main  bspp_main js_cmi_datasets \
 		 js_main
 OTHER_CORE_CMXS= $(addprefix core/, $(addsuffix .cmx, $(OTHER_CORE_SRCS)))
-BSB_SRCS= bsb_config bsb_build_schemas bsb_build_util \
-	bsb_dir bsb_ninja \
+BSB_SRCS= bsb_config \
+	bsb_exception\
+	bsb_build_schemas \
+	bsb_build_util \
+	bsb_dir \
+	bsb_ninja \
 	bsb_build_ui \
 	bsb_default\
 	bsb_dep_infos\
