--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -97,7 +97,8 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	js_re_test\
 	name_mangle_test\
 	oo_js_test_date\
-	bs_uncurry_test
+	bs_uncurry_test\
+	functor_ffi
 
 
 SOURCE_LIST :=  $(OTHERS)
